--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ CLERK_SECRET_KEY=sk_test_K6QqxtrILlQSBnToKQ76ymDCt1B6a0xKuhbdnkL7y3
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=duhapidbx
 CLOUDINARY_API=938363111977123
 CLOUDINARY_SECRET=afIbxbPjOeQYwMVb-tQKF59iInM
-MONGO_URI=mongodb+srv://mshubh612:DEBUGOIST@cluster0.3gu7p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://ashishashish7440:ashish@cluster0.xpgjr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
