--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "dicons": "^1.1.7",
     "framer-motion": "^12.5.0",
+    "gsap": "^3.12.7",
     "immer": "^10.1.1",
     "lucide-react": "^0.471.0",
     "mini-svg-data-uri": "^1.4.4",
